<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.ws</groupId>
    <artifactId>AzureAdWsIntegration</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>AzureAdWsIntegration</name>
    <description>Demo project for azure ad integration</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>17</java.version>
        <spring-cloud-azure.version>5.16.0</spring-cloud-azure.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.azure.spring</groupId>
            <artifactId>spring-cloud-azure-starter-active-directory</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- New dependencies from the first pom.xml -->
        <!--		<dependency>-->
        <!--			<groupId>com.azure.resourcemanager</groupId>-->
        <!--			<artifactId>azure-resourcemanager</artifactId>-->
        <!--			<version>2.17.0</version>-->
        <!--		</dependency>-->
        <!--		<dependency>-->
        <!--			<groupId>com.azure</groupId>-->
        <!--			<artifactId>azure-identity</artifactId>-->
        <!--			<version>1.5.3</version>-->
        <!--		</dependency>-->

        <!-- https://mvnrepository.com/artifact/com.azure/azure-identity -->
        <!--		<dependency>-->
        <!--			<groupId>com.azure</groupId>-->
        <!--			<artifactId>azure-identity</artifactId>-->
        <!--			<version>1.14.0</version>-->
        <!--			<scope>compile</scope>-->
        <!--		</dependency>-->


        <!--		<dependency>-->
        <!--			<groupId>com.azure</groupId>-->
        <!--			<artifactId>azure-identity</artifactId>-->
        <!--			<version>1.14.0</version> &lt;!&ndash; You can also try 1.5.3 or later &ndash;&gt;-->
        <!--		</dependency>-->


        <!-- https://mvnrepository.com/artifact/com.microsoft.graph/microsoft-graph -->
        <dependency>
            <groupId>com.microsoft.graph</groupId>
            <artifactId>microsoft-graph</artifactId>
            <version>5.80.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.azure/azure-identity -->
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-identity</artifactId>
            <version>1.14.0</version>
            <scope>compile</scope>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.microsoft.graph/microsoft-graph-auth -->
        <dependency>
            <groupId>com.microsoft.graph</groupId>
            <artifactId>microsoft-graph-auth</artifactId>
            <version>0.3.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp/okhttp -->
        <!--		<dependency>-->
        <!--			<groupId>com.squareup.okhttp</groupId>-->
        <!--			<artifactId>okhttp</artifactId>-->
        <!--			<version>2.7.5</version>-->
        <!--		</dependency>-->


        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.6</version>
        </dependency>
        <!-- Uncomment if needed
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        -->
        <!-- https://mvnrepository.com/artifact/com.microsoft.graph/microsoft-graph -->


        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->

        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.4</version>
        </dependency>


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>


        <!--		Azure Resources relayted-->


        <!--        &lt;!&ndash;		&lt;!&ndash; Azure SQL SDK (for interacting with Azure SQL Database) &ndash;&gt;&ndash;&gt;-->
        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>com.microsoft.sqlserver</groupId>-->
        <!--            <artifactId>mssql-jdbc</artifactId>-->
        <!--            <version>12.8.1.jre11</version>-->
        <!--        </dependency>-->


        <!--        &lt;!&ndash;		&lt;!&ndash; Azure Core SDK &ndash;&gt;&ndash;&gt;-->
        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.azure/azure-core &ndash;&gt;-->
        <dependency>
            <groupId>com.azure</groupId>
            <artifactId>azure-core</artifactId>
            <version>1.53.0</version>
        </dependency>


        <!--        &lt;!&ndash; Azure SDK for Resource Management (for resource groups and other resources) &ndash;&gt;-->
        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.microsoft.azure/azure-mgmt-resources &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>com.microsoft.azure</groupId>-->
        <!--            <artifactId>azure-mgmt-resources</artifactId>-->
        <!--            <version>1.41.4</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>nimbus-jose-jwt</artifactId>
            <version>9.23</version>
        </dependency>

        <!--        &lt;!&ndash; Apache HttpClient for fetching the JWKS &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>org.apache.httpcomponents</groupId>-->
        <!--            <artifactId>httpclient</artifactId>-->
        <!--            <version>4.5.13</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; Jackson Databind for JSON parsing &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
        <!--            <artifactId>jackson-databind</artifactId>-->
        <!--            <version>2.12.5</version>-->
        <!--        </dependency>-->


        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>2.1.3</version>
        </dependency>


        <dependency>
            <groupId>org.eclipse.parsson</groupId>
            <artifactId>parsson</artifactId>
            <version>1.1.6</version>
        </dependency>


        <!--        Azure Resources related     -->
        <!-- https://mvnrepository.com/artifact/com.azure.resourcemanager/azure-resourcemanager -->
        <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager</artifactId>
            <version>2.44.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.azure.resourcemanager/azure-resourcemanager-network -->
        <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager-network</artifactId>
            <version>2.44.0</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.azure.resourcemanager/azure-resourcemanager-compute -->
        <dependency>
            <groupId>com.azure.resourcemanager</groupId>
            <artifactId>azure-resourcemanager-compute</artifactId>
            <version>2.44.0</version>
        </dependency>

        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.microsoft.azure.resources.v2016_06_01/azure-mgmt-subscriptions &ndash;&gt;-->
        <!--        <dependency>-->
        <!--            <groupId>com.microsoft.azure.resources.v2016_06_01</groupId>-->
        <!--            <artifactId>azure-mgmt-subscriptions</artifactId>-->
        <!--            <version>1.0.0-beta</version>-->
        <!--        </dependency>-->

        <!--        &lt;!&ndash; SWAGGER   &ndash;&gt;-->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.5.0</version>
        </dependency>


        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>1.5.3.Final</version>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct-processor</artifactId>
            <version>1.5.3.Final</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springframework.statemachine/spring-statemachine-core -->
<!--        <dependency>-->
<!--            <groupId>org.springframework.statemachine</groupId>-->
<!--            <artifactId>spring-statemachine-core</artifactId>-->
<!--            <version>3.2.1</version>-->
<!--        </dependency>-->


    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.azure.spring</groupId>
                <artifactId>spring-cloud-azure-dependencies</artifactId>
                <version>${spring-cloud-azure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>2.18.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
